# FarmUncertainty

./: .pre-commit-config.yaml  pyproject.toml  readme.md
examples/: farmer_generator.ipynb
farm_uncertainty/: farmers.py  utils.py
