[tool.poetry]
name = "farm_uncertainty"
version = "0.1.0"
description = "Model of farmer uptake of subsidies for agri-environmental schemes under future uncertainty"
authors = ["Mattia Mancini <m.c.mancini@exeter.ac.uk>, Amy Binner <a.r.binner@exeter.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^24.1.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
